# weiqi

./: CMakeLists.txt  Glog.cpp  Glog.h  board.cpp  board.h  board_factory.h  chess_piece.cpp  chess_piece.h  game.cpp  game.h  main.cpp  mainwindow.cpp  mainwindow.h  play_menu.cpp  play_menu.h  player.h  player_factory.h  startmenu.cpp  startmenu.h  startmenu.ui  status.h
